Lots of styling fixes, aligned buttons, cart display, review positioning. Looks decent on desktop, but some later voodoo needed for media queries for mobile

--- a/style.css
+++ b/style.css
@@ -26,7 +26,19 @@ img {
 .product-image,
 .product-info {
   margin-top: 10px;
-  width: 50%;
+}
+
+.product-image {
+  width: 40%;
+}
+
+.product-info {
+  width: 60%;
+}
+
+.product-image img {
+  max-height: 100%;
+  max-width: 100%;
 }
 
 .color-box {
@@ -35,26 +47,33 @@ img {
   margin: 5px 5px 5px 5px;
 }
 
-.color-box-wrapper {
+.color-box-wrapper,
+.button-row-wrapper,
+.product-image-description-wrapper {
   display: flex;
   flex-direction: row;
 }
 
+.product-image-description-wrapper {
+  min-height: 500px;
+  height: auto;
+}
+
 .cart {
-  margin-right: 25px;
+  margin: 25px 25px;
   float: right;
   border: 1px solid #d8d8d8;
   padding: 5px 20px;
 }
 
 button {
-  margin-top: 30px;
+  margin: 1rem 1rem 0 1rem;
   border: none;
   background-color: #1e95ea;
   color: white;
-  height: 40px;
-  width: 100px;
-  font-size: 14px;
+  height: 60px;
+  width: 120px;
+  font-size: 16px;
 }
 
 .disabledButton {
@@ -93,6 +112,6 @@ textarea {
   text-decoration: line-through;
 }
 
-.removeCartButton {
-  margin-left: 1rem;
+.product-tab-div {
+  width: 100vw;
 }
